--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "mysql": "^2.17.1",
-    "nodemon": "^1.19.4"
+    "nodemon": "^1.19.4",
+    "express-validator": "^5.3.1"
   }
 }
