--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
+    "express-validator": "^5.3.1",
     "mysql": "^2.17.1",
-    "nodemon": "^1.19.4",
-    "express-validator": "^5.3.1"
+    "nodemon": "^1.19.4"
   }
 }
