--- a/package.json
+++ b/package.json
@@ -11,12 +11,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "alert": "^1.0.0",
+    "alertify": "^0.3.0",
     "body-parser": "^1.19.0",
     "cookie-parser": "^1.4.4",
     "ejs": "^2.7.1",
     "express": "^4.17.1",
     "express-session": "^1.17.0",
     "express-validator": "^5.3.1",
+    "js-alert": "^1.0.4",
     "mysql": "^2.17.1",
     "nodemon": "^1.19.4"
   }
